# DataMeat

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  app.cpp
include/DataMeat/: DataMeat.hpp  DynamicArray.hpp  Iterator.hpp  Node.hpp
src/: CMakeLists.txt
